    reads it. Except for very unlikely situation this should replace
    the use of local file variables (which remains possible and
    overrides project file options).

*** Support for prettify-symbols-mode.

*** Colors in response and goals buffers

    Experimental: colorize hypothesis names and some parts of error
    and warning messages. For readability.

*** Coq Querying facilities

**** Minibuffer interactive queries

    Menu Coq/Other Queries (C-c C-a C-q) allows to send queries (like
    Print, Locate...) (à la auctex) without inserting them in the
    buffer. Queries are TAB completed and the usual history mechanism
    applies. Completion allows only a set of state preserving
    commands. The list is not exhaustive yet.

    This should replace the C-c C-v usual command mechanism (which has
    no completion).

**** Mouse Queries

    This remaps standard emacs key bindings (faces and buffers menus
    popup), so this is not enabled by default, use (setq
    coq-remap-mouse-1 t) to enable.

    - (control mouse-1) on an identifier sends a Print query on that id.
    - (shift mouse-1) on an identifier sends a About query on that id.
    - (control shift mouse-1) on an identifier sends a Check query on
      that id.

    As most of the bindings, they are active in the three buffer
    (script, goals, response). Obeys C-u prefix for "Printing all"
    flag.

*** bug fixes
    - Annoying cursor jump when hitting ".".
    - random missing output due to the prover left in silent mode by
      a previously scripted error.
    - Better display of warnings (less messages lost).

* Changes of Proof General 4.2 from Proof General 4.1

** Generic/misc changes

*** Added user option: `proof-next-command-insert-space'
    Allows the user to turn off the electric behaviour of generating
    newlines or spaces in the buffer.  Turned on by default, set
    to nil to revert to PG 3.7 behaviour.

*** Support proof-tree visualization via the external Prooftree program